syntax = "proto3";

option java_package = "ru.task.deliveryapp";

// The Geo service definition.
service Geo {

  // Get Geolocation
  rpc GetGeolocation (GetGeolocationRequest) returns (GetGeolocationReply);
}

// Request
message GetGeolocationRequest {
  string Address = 1;
}

// Response
message GetGeolocationReply {
  Location Location = 1;
}

// Geolocation
message Location {
  int32 x = 1;
  int32 y = 2;
}

message ErrorResponse {
  string text = 1;
}
